hphp/test/slow/missing_local.php.expectf

Fatal error: Uncaught exception 'UndefinedVariableException' with message 'Undefined variable: x' in %s/missing_local.php:5
Stack trace:
%A
